log/build_2024-11-23_19-55-06/manager/stderr.log
  File "/home/robot/human_ws/install/manager/lib/python3.10/site-packages/manager/manager.py", line 4
    class 
          ^
SyntaxError: invalid syntax

